backend: remove unused TimesheetRiga and Utente relationships and update related tests